correction padding header/caraousel; font-size description collapse content

--- a/src/components/Collapse/index.scss
+++ b/src/components/Collapse/index.scss
@@ -31,10 +31,15 @@
       background-color: #f6f6f6;
       color: #000;
       padding: 1rem;
-      font-size: 18px;
+      font-size: 16px;
       line-height: 1.4;
     }
 
+    &-content ul li {
+      margin-bottom: 5px;
+      font-size: inherit;
+      color: #000;
+    }
 
     @media screen and (max-width: 1024px) {
     &-header {
