--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -25,7 +25,6 @@
   /* Mobile */
   @media screen and (max-width: 768px) {
     margin: 0 auto;
-    padding: 10px;
 
     .card-wrapper {
       grid-template-columns: 1fr;
